Bug 361682 - Internal error: sanityCheckAllJobsAreCancellable()
Summary: Internal error: sanityCheckAllJobsAreCancellable()
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 3.0 Alpha
Platform: Microsoft Windows Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL: http://sta.sh/022r0rwd9cfe
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-12 17:20 UTC by Rastaban26
Modified: 2016-04-15 16:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rastaban26 2016-04-12 17:20:11 UTC
Settings: 
- openGL - enabled
- instand preview - enabled

Conditions:
- canvas 5000 x 3000
- using big, textured brushes

Situation description:
Was doing just some random painting (tablet with a pressure), testing out the responsiveness of instant preview and color picking while brush ware processed. After some time, at a random moment I've received an internal error:

ASSERT krita(): "sanityCheckAllJobsAreCancellable()" in file C:\kritadev\krita\libs\image\kis_stroke.cpp, line 151  (please check the photo)

Ignoring the error was not possible. Had to kill the process.


Reproducible: Didn't try




CPU: Intel i5-3210M @2.50 GHz 
Memory: 8 GB System: 
Windows 7 64b 
GPU: NVIDIA GeForce GT 630M 
Tablet: Wacom Bamboo
Comment 1 Halla Rempt 2016-04-15 06:14:17 UTC
Hi Rastaban,

Thanks for your report. I've made this task for Dmitry: https://phabricator.kde.org/T2287
Comment 2 Dmitry Kazakov 2016-04-15 16:07:29 UTC
Git commit 2063e1698fb12d053e1e404b1ebcb6abd9f43fed by Dmitry Kazakov.
Committed on 15/04/2016 at 16:04.
Pushed by dkazakov into branch 'master'.

Fix an assert in KisStroke::cancelStroke()

LodN strokes can have an uncancellable jobs ('suspend'), and not
be started yet. This is a normal situation.

Fixes T2287

M  +10   -4    libs/image/kis_stroke.cpp

http://commits.kde.org/krita/2063e1698fb12d053e1e404b1ebcb6abd9f43fed