Fix an assert in KisStroke::cancelStroke()

LodN strokes can have an uncancellable jobs ('suspend'), and not
be started yet. This is a normal situation.

Fixes T2287
BUG:361682